# crm_svc

./: Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_create_documents_table.py  0002_create_reporting_tables.py
src/crm_svc/: app.py  config.py  main.py
src/crm_svc/frontend/: __init__.py
src/crm_svc/frontend/components/: __init__.py  charts.py  mobile_components.py
src/crm_svc/frontend/pages/: __init__.py  dashboard.py
src/crm_svc/frontend/utils/: mobile_utils.py
src/crm_svc/models/: __init__.py  base.py  customer.py  document.py  report.py  user.py
src/crm_svc/routers/: reports.py
src/crm_svc/schemas/: __init__.py  document.py  report.py
src/crm_svc/services/: __init__.py  document_service.py  report_service.py
src/crm_svc/utils/: __init__.py  file_storage.py
src/plotly/: __init__.py  express.py  graph_objects.py
tests/: conftest.py  test_document_model.py  test_report_models.py
tests/api/: test_reports_api.py
tests/docs/: test_readme_mobile_section.py
tests/frontend/: test_charts.py  test_dashboard_fetching.py  test_dashboard_init.py  test_mobile_components.py  test_mobile_responsiveness.py  test_mobile_utils.py
tests/schemas/: test_report_schemas.py
tests/services/: test_document_service.py  test_report_service.py
tests/utils/: test_file_storage.py
