[tool.poetry]
name = "crm_svc"
version = "1.0.0"
description = ""
authors = ["AIdev"]
readme = "README.md"
packages = [{include = "crm_svc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
bcrypt = "^5.0.0"
argon2-cffi = "^25.1.0"
email-validator = "^2.3.0"
sendgrid = "^6.12.5"
ecdsa = "^0.19.1"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
pydantic-settings = "^2.11.0"
filetype = "^1.2.0"
aiofiles = "^24.1.0"
streamlit = "^1.50.0"
plotly = "5.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.28.1"

[tool.poetry.scripts]
crm_svc = "crm_svc.main:main"

[tool.pytest.ini_options]
pythonpath = [ "src/" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"